--- a/Bookish_V2/Bookish_V2.Web/Views/Home/Index.cshtml
+++ b/Bookish_V2/Bookish_V2.Web/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using Bookish_V2.DataAccess
+@using Bookish_V2.Web.Models
+@model Bookish_V2.Web.Models.LibraryCatalogueViewModel
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -9,7 +12,16 @@
 <body>
 <table>
 	<tr><th>Title</th><th>Author(s)</th><th>Copies</th></tr>
-
+	@{
+		foreach (var book in Model.inventory.Keys)
+		{
+			@:<tr>
+			<td> @book.Title </td>
+			<td> @book.Authors </td>
+			<td> @Model.inventory[book]</td>
+			@:</tr>
+		}
+	}
 </table>
 </body>
 </html>
