--- a/Bookish_V2/Bookish_V2.Web/Views/Home/Index.cshtml
+++ b/Bookish_V2/Bookish_V2.Web/Views/Home/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@using Bookish_V2.Web.Models;
-@using Bookish_V2.DataAccessFmwk;
-@model Bookish_V2.Web.Models.LibraryCatalogueViewModel
-@{
+﻿@{
 	ViewBag.Title = "Home Page";
 }
 
@@ -10,18 +7,7 @@
 
 </head>
 <body>
-	<table>
-		<tr><th>Title</th><th>Author(s)</th><th>Copies</th></tr>
-		@{
-			foreach (var book in Model.inventory.Keys)
-			{
-				@:<tr>
-					<td> @book.Title </td>
-					<td> @book.Authors </td>
-					<td> @Model.inventory[book]</td>
-				@:</tr>
-			}
-		}
-	</table>
+<h2>Welcome to the Bookish online library!</h2>
+<p>Please log in to access the library catalogue.</p>
 </body>
 </html>
