Book titles in catalogue now are links to book-details pages.

--- a/Bookish_V2/Bookish_V2.Web/Views/Home/Catalogue.cshtml
+++ b/Bookish_V2/Bookish_V2.Web/Views/Home/Catalogue.cshtml
@@ -18,7 +18,7 @@
 					foreach (var book in Model.inventory.Keys)
 					{
 						@:<tr>
-							<td> @book.Title </td>
+							<td> @Html.ActionLink(book.Title, "Book", "Home", new {bookId = book.BookId}, null) </td>
 							<td> @book.Authors </td>
 							<td> @Model.inventory[book]</td>
 						@:</tr>
