Moved the library views into their own folder.

--- a/Bookish_V2/Bookish_V2.Web/Views/Shared/_Layout.cshtml
+++ b/Bookish_V2/Bookish_V2.Web/Views/Shared/_Layout.cshtml
@@ -22,10 +22,9 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li>@Html.ActionLink("Home", "Index", "Home")</li>
 					@if (Request.IsAuthenticated)
 					{
-					<li>@Html.ActionLink("Catalogue", "Catalogue", "Home")</li>
+						<li>@Html.ActionLink("Catalogue", "Catalogue", "Library")</li>
 					}
 				</ul>
 				@Html.Partial("_LoginPartial")
