Can now view page of own books taken out.

--- a/Bookish_V2/Bookish_V2.Web/Views/Shared/_Layout.cshtml
+++ b/Bookish_V2/Bookish_V2.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
 					@if (Request.IsAuthenticated)
 					{
 						<li>@Html.ActionLink("Catalogue", "Catalogue", "Library")</li>
+						<li>@Html.ActionLink("MyBooks", "MyBooks", "Library")</li>
 					}
 				</ul>
 				@Html.Partial("_LoginPartial")
