Can now add new books to the database.

--- a/Bookish_V2/Bookish_V2.Web/Views/Shared/_Layout.cshtml
+++ b/Bookish_V2/Bookish_V2.Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
 					{
 						<li>@Html.ActionLink("Catalogue", "Catalogue", "Library")</li>
 						<li>@Html.ActionLink("MyBooks", "MyBooks", "Library")</li>
+						<li>@Html.ActionLink("Add Book", "AddBook", "Library")</li>
 					}
 				</ul>
 				@Html.Partial("_LoginPartial")
